# RemoteStar

./: CMakeLists.txt  README.md  SSH.cpp  SSH.h  StarHost.cpp  StarHost.h  StarJob.cpp  StarJob.h  exit_codes.h  host_list  main.cpp  screen1  star_client.cpp  star_client.h  star_hostList  star_jobData  star_runScript  star_sshServer
MightyMacroMaker/: Aircraft.cpp  Aircraft.h  AutoSave.cpp  AutoSave.h  CloseSim.cpp  CloseSim.h  Domain.cpp  Domain.h  ExportResults.cpp  ExportResults.h  Import.cpp  Import.h  MacroEnum.h  MeshContinuum.cpp  MeshContinuum.h  MeshValues.cpp  MeshValues.h  MightyConstants.h  MightyMacro.cpp  MightyMacro.h  MightyMath.cpp  MightyMath.h  MightyScene.cpp  MightyScene.h  MightyTypes.h  PhysicsContinuum.cpp  PhysicsContinuum.h  PhysicsValues.cpp  PhysicsValues.h  README.md  ShowDomain.cpp  ShowDomain.h  SolutionMonitors.cpp  SolutionMonitors.h  SolverOptions.cpp  SolverOptions.h  StoppingCriteria.cpp  StoppingCriteria.h  VolumetricControls.cpp  VolumetricControls.h
